--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
   </div>
 
   <!-- Popup Overlay -->
-  <div id="popup-overlay" class="fixed inset-0 bg-black bg-opacity-70 hidden justify-center items-center z-50">
+  <!-- Popup Overlay -->
+<div id="popup-overlay" class="fixed inset-0 bg-black bg-opacity-70 flex justify-center items-center hidden z-50">
     <div class="bg-gray-900 rounded-lg max-w-2xl w-full max-h-[90vh] overflow-auto relative p-4">
       <button id="popup-close" class="absolute top-2 right-2 text-gray-400 hover:text-white text-xl">&times;</button>
       <div id="popup-content" class="text-sm text-gray-200">Loading...</div>
