--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
   </div>
 
   <!-- Popup Overlay -->
-  <!-- Popup Overlay -->
 <div id="popup-overlay" class="fixed inset-0 bg-black bg-opacity-70 flex justify-center items-center hidden z-50">
     <div class="bg-gray-900 rounded-lg max-w-2xl w-full max-h-[90vh] overflow-auto relative p-4">
       <button id="popup-close" class="absolute top-2 right-2 text-gray-400 hover:text-white text-xl">&times;</button>
@@ -59,98 +58,100 @@
       }
     }
 
-    function renderMods(modArray) {
-      const container = document.getElementById('mod-list');
-      container.innerHTML = '';
+function renderMods(modArray) {
+  const container = document.getElementById('mod-list');
+  container.innerHTML = '';
 
-      modArray.forEach(mod => {
-        const card = document.createElement('div');
-        card.className = 'bg-gray-800 p-3 rounded-md shadow-sm flex flex-col h-full';
+  modArray.forEach(mod => {
+    const card = document.createElement('div');
+    card.className = 'bg-gray-800 p-3 rounded-md shadow-sm flex flex-col justify-between h-full min-h-[500px]'; // Uniform height
 
-        const titleRow = document.createElement('div');
-        titleRow.className = 'flex justify-between items-center mb-1';
+    const titleRow = document.createElement('div');
+    titleRow.className = 'flex justify-between items-center mb-1';
 
-        const title = document.createElement('h3');
-        title.className = 'text-lg font-semibold';
-        title.textContent = mod.title;
+    const title = document.createElement('h3');
+    title.className = 'text-lg font-semibold';
+    title.textContent = mod.title;
 
-        const rating = document.createElement('div');
-        rating.className = 'flex items-center space-x-0.5 text-yellow-400';
-        const stars = renderStars(mod.rating || 0);
-        rating.innerHTML = stars;
+    const rating = document.createElement('div');
+    rating.className = 'flex items-center space-x-0.5 text-yellow-400';
+    const stars = renderStars(mod.rating || 0);
+    rating.innerHTML = stars;
 
-        titleRow.appendChild(title);
-        titleRow.appendChild(rating);
+    titleRow.appendChild(title);
+    titleRow.appendChild(rating);
 
-        const desc = document.createElement('p');
-        desc.className = 'text-gray-400 mb-1 text-sm';
-        desc.textContent = mod.description;
+    const desc = document.createElement('p');
+    desc.className = 'text-gray-400 mb-1 text-sm';
+    desc.textContent = mod.description;
 
-        const links = document.createElement('div');
-        links.className = 'mb-2';
-        (mod.links || []).forEach(link => {
-          const a = document.createElement('a');
-          a.href = link.url;
-          a.textContent = link.label;
-          a.className = 'block text-blue-400 hover:underline text-sm cursor-pointer';
-          if (link.label.toLowerCase().includes('install guide')) {
-            a.addEventListener('click', e => {
-              e.preventDefault();
-              openPopup(link.url);
-            });
-          } else {
-            a.target = '_blank';
-          }
-          links.appendChild(a);
+    const links = document.createElement('div');
+    links.className = 'mb-2';
+    (mod.links || []).forEach(link => {
+      const a = document.createElement('a');
+      a.href = link.url;
+      a.textContent = link.label;
+      a.className = 'block text-blue-400 hover:underline text-sm cursor-pointer';
+      if (link.label.toLowerCase().includes('install guide')) {
+        a.addEventListener('click', e => {
+          e.preventDefault();
+          openPopup(link.url);
         });
-
-        const video = document.createElement('iframe');
-        video.src = mod.video;
-        video.className = 'w-full h-40 mt-auto rounded';
-        video.allow = 'accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture';
-        video.allowFullscreen = true;
-
-        card.appendChild(titleRow);
-        card.appendChild(desc);
-        card.appendChild(links);
-        if (mod.video) {
-  card.appendChild(video);
-}
-
-// Pros & Cons Section
-if (mod.pros || mod.cons) {
-  const prosConsContainer = document.createElement('div');
-  prosConsContainer.className = 'mt-2 grid grid-cols-2 gap-2 text-xs';
-
-  // Pros
-  const prosDiv = document.createElement('div');
-  if (mod.pros && mod.pros.length > 0) {
-    mod.pros.forEach(pro => {
-      const p = document.createElement('p');
-      p.className = 'text-green-400';
-      p.textContent = `+ ${pro}`;
-      prosDiv.appendChild(p);
+      } else {
+        a.target = '_blank';
+      }
+      links.appendChild(a);
     });
-  }
 
-  // Cons
-  const consDiv = document.createElement('div');
-  if (mod.cons && mod.cons.length > 0) {
-    mod.cons.forEach(con => {
-      const p = document.createElement('p');
-      p.className = 'text-red-400';
-      p.textContent = `- ${con}`;
-      consDiv.appendChild(p);
-    });
-  }
+    const video = document.createElement('iframe');
+    video.src = mod.video;
+    video.className = 'w-full aspect-video mt-2 rounded'; // Uniform video size (16:9)
+    video.allow = 'accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture';
+    video.allowFullscreen = true;
 
-  prosConsContainer.appendChild(prosDiv);
-  prosConsContainer.appendChild(consDiv);
-  card.appendChild(prosConsContainer);
-}
-        container.appendChild(card);
-      });
+    card.appendChild(titleRow);
+    card.appendChild(desc);
+    card.appendChild(links);
+    if (mod.video) {
+      card.appendChild(video);
     }
+
+    // Pros & Cons Section - Uniform height
+    if (mod.pros || mod.cons) {
+      const prosConsContainer = document.createElement('div');
+      prosConsContainer.className = 'mt-2 grid grid-cols-2 gap-2 text-xs min-h-[60px]'; // Uniform height
+
+      // Pros
+      const prosDiv = document.createElement('div');
+      if (mod.pros && mod.pros.length > 0) {
+        mod.pros.forEach(pro => {
+          const p = document.createElement('p');
+          p.className = 'text-green-400';
+          p.textContent = `+ ${pro}`;
+          prosDiv.appendChild(p);
+        });
+      }
+
+      // Cons
+      const consDiv = document.createElement('div');
+      if (mod.cons && mod.cons.length > 0) {
+        mod.cons.forEach(con => {
+          const p = document.createElement('p');
+          p.className = 'text-red-400';
+          p.textContent = `- ${con}`;
+          consDiv.appendChild(p);
+        });
+      }
+
+      prosConsContainer.appendChild(prosDiv);
+      prosConsContainer.appendChild(consDiv);
+      card.appendChild(prosConsContainer);
+    }
+
+    container.appendChild(card);
+  });
+}
+
 
     function renderStars(rating) {
       const fullStar = '<svg class="w-4 h-4 fill-current" viewBox="0 0 20 20"><path d="M10 15l-5.878 3.09 1.122-6.545L.487 6.91l6.561-.955L10 0l2.952 5.955 6.561.955-4.757 4.635 1.122 6.545z"/></svg>';
