--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!-- Footer -->
     <footer class="mt-8 text-center text-sm text-gray-500">
-      &copy; 2025 Cheeki. All rights reserved. <a href="https://example.com" target="_blank" class="text-blue-400 hover:underline">Edit this link</a>
+      Cheeki's Mods Archive - <a href="https://linktr.ee/cheekibreekii" target="_blank" class="text-blue-400 hover:underline">Check me Out!</a>
     </footer>
   </div>
 
