--- a/guides/mod02-wot.html
+++ b/guides/mod02-wot.html
@@ -9,7 +9,7 @@
 <body class="bg-gray-900 text-white font-sans p-6">
   <div class="max-w-3xl mx-auto bg-gray-800 p-6 rounded-lg shadow-lg">
     <!-- Title -->
-    <h1 class="text-2xl font-bold mb-4 border-b border-gray-600 pb-2">MOD TITLE</h1>
+    <h1 class="text-2xl font-bold mb-4 border-b border-gray-600 pb-2">Wind Of Time</h1>
 
     <!-- Installation Guide -->
     <h2 class="text-xl font-semibold mb-2">Installation Guide</h2>
