--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <!-- Mod List -->
-    <div id="mod-list" class="grid gap-4 grid-cols-[repeat(auto-fit,minmax(250px,1fr))]"></div>
+    <div id="mod-list" class="grid gap-4 grid-cols-[repeat(auto-fill,minmax(300px,1fr))]"></div>
 
     <!-- Footer -->
     <footer class="mt-8 text-center text-sm text-gray-500">
